clusters/smart-cash-develop/core/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: develop
  labels:
    project: smart-cash
    istio.io/dataplane-mode: ambient

---

apiVersion: v1
kind: Namespace
metadata:
  name: nginx-ingress
  labels:
    ingress: nginx
---

apiVersion: v1
kind: Namespace
metadata:
  name: monitoring

---

apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager

---

apiVersion: v1
kind: Namespace
metadata:
  name: gatekeeper-system

---

apiVersion: v1
kind: Namespace
metadata:
  name: fluent-bit

---

apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
