clusters/smart-cash-develop/core/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: core-ingress
  namespace: develop
spec:
  ingressClassName: nginx
  rules:
  - host: develop.danielrive.site
    http:
      paths:
      - path: /user
        pathType: Prefix
        backend:
          service:
            name: user-service
            port: 
              number: 8181
      - path: /expenses
        pathType: Prefix
        backend:
          service:
            name: expenses-service
            port:
              number: 8282
