clusters/smart-cash-develop/core/np-default-policies.yaml
### Rule Description
##  Deny  all communications in develop namespace

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: develop
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress

---
### Rule Description
##  Allow egress traffic to CoreDNS

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-traffic-coredns
  namespace: develop
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - protocol: UDP
      port: 53


---
### Rule Description
##  ### Allow traffic TO/FROM AWS pod identity agent
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-traffic-pod-identity
  namespace: develop
spec:
  podSelector: 
    matchLabels:
      tier: backend
  policyTypes:
  - Egress
  - Ingress
  ingress:
  - from:
    - ipBlock:
        cidr: 169.254.170.23/32
  egress:
  - to:
    - ipBlock:
        cidr: 169.254.170.23/32


---
### Rule Description
##  Allow egress traffic to HTTPs
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-https
  namespace: develop
spec:
  podSelector: 
    matchLabels:
      tier: backend
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector: {}
    - ipBlock:
        cidr: 0.0.0.0/0  
    ports:
    - protocol: TCP
      port: 443
